fixed centering glitch on mobile

--- a/beta/binary.css
+++ b/beta/binary.css
@@ -5,6 +5,9 @@
     top:50%;
     left:50%;
     transform: translate(-50%, -50%);
+    -webkit-transform: translate(-50%, -50%);
+    -ms-transform: translate(-50%, -50%);
+    -o-transform: translate(-50%, -50%);
 }
 
 .world-container
